[project]
name = "continuous-armset-bai"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pandas>=2.2.2",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.0",
    "numpy>=1.26.4",
    "scipy>=1.13.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
    "ipykernel>=6.29.4",
    "pip>=24.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/continuous_armset_bai"]
